Add blogs functionality

--- a/agntix-nextjs/package.json
+++ b/agntix-nextjs/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "@stripe/stripe-js": "^8.1.0",
+    "@supabase/supabase-js": "^2.76.0",
     "@types/jquery": "^3.5.32",
     "atropos": "^2.0.2",
     "bootstrap": "5.3.6",
@@ -22,6 +23,8 @@
     "jquery": "^3.7.1",
     "next": "15.2.0",
     "next-themes": "^0.4.6",
+    "node-cron": "^4.2.1",
+    "openai": "^6.6.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.0.0",
@@ -31,7 +34,8 @@
     "slick-carousel": "^1.8.1",
     "stripe": "^19.1.0",
     "swiper": "^11.2.8",
-    "three": "^0.179.1"
+    "three": "^0.179.1",
+    "uuid": "^13.0.0"
   },
   "resolutions": {
     "three": "^0.179.1"
@@ -41,11 +45,13 @@
     "@types/imagesloaded": "^4.1.7",
     "@types/isotope-layout": "^3.0.15",
     "@types/node": "^20",
+    "@types/node-cron": "^3.0.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-slick": "^0.23.13",
     "@types/splitting": "^1.0.6",
     "@types/three": "^0.179.0",
+    "@types/uuid": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.2.0",
     "typescript": "^5"
